@@ -1,0 +1,77 @@
+####### Schema declarations #######
+#
+# The form is:
+#   schema.<prefix> = <namespace URL>
+#
+# These will be added as: <link rel="schema.XXX" href="URL"/>
+
+schema.DC = http://purl.org/dc/elements/1.1/
+schema.DCTERMS = http://purl.org/dc/terms/
+
+
+####### Metadata field mappings #######
+#
+# The form is:
+# <dspace-schema>.<element>[.<qualifier>] = <output-schema>.<output-element>[,<scheme>]
+#
+# Where:
+#   dspace-schema  - schema short name from DSpace metadata registry (e.g. 'dc')
+#   scheme - value for scheme="X" tag for <meta> written to XHTML header
+#
+# Note: where there is a custom qualifier for which no corresponding property
+# exists in the list below, the crosswalk will remove the qualifier and try
+# again with just the element.
+#
+# e.g. if a field exists in the database "dc.contributor.editor", and there
+# is no dc.contributor.editor property below, the mapping for "dc.contributor"
+# will be used.  If an element in the item metadata record does not appear in
+# the configuration, it is simply ignored; the emphasis here is on exposing
+# standards-compliant metadata.
+
+dc.contributor                 = DC.contributor
+dc.contributor.author          = DC.creator
+dc.coverage.spatial            = DCTERMS.spatial
+dc.coverage.temporal           = DCTERMS.temporal
+dc.creator                     = DC.creator
+dc.date                        = DC.date,DCTERMS.W3CDTF
+dc.date.accessioned            = DCTERMS.dateAccepted,DCTERMS.W3CDTF
+dc.date.available              = DCTERMS.available,DCTERMS.W3CDTF
+dc.date.copyright              = DCTERMS.dateCopyrighted,DCTERMS.W3CDTF
+dc.date.created                = DCTERMS.created,DCTERMS.W3CDTF
+dc.date.issued                 = DCTERMS.issued,DCTERMS.W3CDTF
+dc.identifier                  = DC.identifier
+dc.identifier.citation         = DCTERMS.bibliographicCitation
+dc.identifier.uri              = DC.identifier,DCTERMS.URI
+dc.description                 = DC.description
+dc.description.abstract        = DCTERMS.abstract
+dc.description.tableofcontents = DCTERMS.tableOfContents
+dc.description.uri             = DC.description,DCTERMS.URI
+dc.format                      = DC.format
+dc.format.extent               = DCTERMS.extent
+dc.format.medium               = DCTERMS.medium
+dc.language                    = DC.language
+dc.language.iso                = DC.language,DCTERMS.RFC1766
+dc.publisher                   = DC.publisher
+dc.relation                    = DC.relation
+dc.relation.isformatof         = DCTERMS.isFormatOf
+dc.relation.ispartof           = DCTERMS.isPartOf
+dc.relation.haspart            = DCTERMS.hasPart
+dc.relation.isversionof        = DCTERMS.isVersionOf
+dc.relation.hasversion         = DCTERMS.hasVersion
+dc.relation.isreferencedby     = DCTERMS.isReferencedBy
+dc.relation.requires           = DCTERMS.requires
+dc.relation.replaces           = DCTERMS.replaces
+dc.relation.isreplacedby       = DCTERMS.isReplacedBy
+dc.relation.uri                = DC.relation,DCTERMS.URI
+dc.rights                      = DC.relation
+dc.rights.uri                  = DC.rights,DCTERMS.URI
+dc.source                      = DC.source
+dc.source.uri                  = DC.source,DCTERMS.URI
+dc.subject                     = DC.subject
+dc.subject.ddc                 = DC.subject,DCTERMS.DDC
+dc.subject.lcc                 = DC.subject,DCTERMS.LCC
+dc.subject.lcsh                = DC.subject,DCTERMS.LCSH
+dc.subject.mesh                = DC.subject,DCTERMS.MESH
+dc.title                       = DC.title
+dc.title.alternative           = DCTERMS.alternative
+dc.type                        = DC.type
